# sdl-func-drawer

./: CMakeLists.txt  README.md
src/: main.c  sdl_func_drawer.c  sdl_func_drawer.h
